change button to link (KENH RAO TIN, QUAN LY NHA THUE)

--- a/for-rent.html
+++ b/for-rent.html
@@ -51,27 +51,22 @@
 
 
   <!-- Start header section -->
-  <header id="aa-header">  
+<header id="aa-header">  
     <div class="container">
       <div class="row">
         <div class="col-md-12">
           <div class="aa-header-area">
             <div class="row">
               <div class="col-md-6 col-sm-6 col-xs-6">
-                <div class="aa-header-left">
-                  <div class="aa-telephone-no">
-                    <span class="fa fa-phone"></span>
-                    0979401199
-                  </div>
-                  <div class="aa-email hidden-xs">
-                    <span class="fa fa-envelope-o"></span> TrangTTTSE05109@FPT.EDU.VN
-                  </div>
-                </div>              
+			    <div class="aa-header-right" style="text-align: left;">
+                  <a href="post-news.html" class="aa-register">KÊNH RAO TIN</a>
+                  <a href="index-renter.html" class="aa-login">QUẢN LÝ NHÀ ĐANG THUÊ</a>
+                </div>           
               </div>
               <div class="col-md-6 col-sm-6 col-xs-6">
                 <div class="aa-header-right">
-                  <a href="sign-up.html" class="aa-register">Đăng ký</a>
-                  <a href="log-in.html" class="aa-login">Đăng nhập</a>
+                  <a href="sign-up.html" class="aa-register">ĐĂNG KÝ</a>
+                  <a href="log-in.html" class="aa-login">ĐĂNG NHẬP</a>
                 </div>
               </div>
             </div>
@@ -103,26 +98,16 @@
           <ul id="top-menu" class="nav navbar-nav navbar-right aa-main-nav">
             <li class="active"><a href="index.html">Trang Chủ</a></li>
              <li class="dropdown">
-<!--              <a href="bds-cho-thue.html" class="dropdown-toggle" data-toggle="dropdown">Bất động sản cho thuê <span class="caret"></span></a>-->
-			  <a href="for-rent.html" class="dropdown-toggle">Bất động sản cho thuê <span class="caret"></span></a>
+              <a class="dropdown-toggle" href="for-rent.html">Bất động sản cho thuê <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">                
                 <li><a href="apartment-for-rent.html">Chung cư cho thuê</a></li>                
                 <li><a href="apartment-for-rent.html">Nhà riêng cho thuê</a></li>                
-                <li><a href="apartment-for-rent.html">Văn phòng cho thuê</a></li>                                           
+                <li><a href="apartment-for-rent.html">Văn phòng cho thuê</a></li>  
               </ul>
             </li>
-            <li><a href="gallery.html">GALLERY</a></li>                                         
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="blog-archive.html">BLOG <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">                
-                <li><a href="blog-archive.html">BLOG</a></li>
-                <li><a href="blog-single.html">BLOG DETAILS</a></li>                                            
-              </ul>
-            </li>
-            <li><a href="contact.html">CONTACT</a></li>
-           <li><a href="post-news.html"><button style="line-height: 30px; margin-top: -10px; width: 150px; margin-right: -15px;" type="button" class="btn btn-info ">Kênh rao tin</button></a></li>
-           <li><a href="index-renter.html"><button style="line-height: 30px; margin-top: -10px; width: 150px; margin-right: -15px;" type="button" class="btn btn-info ">Quản lý nhà thuê</button></a></li>
-			</ul>                            
+			<li>
+				<a class="notification" href="notifications.html"><span class="glyphicon glyphicon-bell"></span> Thông báo<span  class="badge">99</span> </a></li>
+          </ul>
         </div><!--/.nav-collapse -->       
       </div>          
     </nav> 
