--- a/index-renter.html
+++ b/index-renter.html
@@ -57,13 +57,6 @@
             <div class="row">
               <div class="col-md-6 col-sm-6 col-xs-6">
                 <div class="aa-header-left">
-                  <div class="aa-telephone-no">
-                    <span class="fa fa-phone"></span>
-                    0979401199
-                  </div>
-                  <div class="aa-email hidden-xs">
-                    <span class="fa fa-envelope-o"></span> TrangTTTSE05109@FPT.EDU.VN
-                  </div>
                 </div>              
               </div>
               <div class="col-md-6 col-sm-6 col-xs-6">
@@ -101,7 +94,7 @@
           <ul id="top-menu" class="nav navbar-nav navbar-right aa-main-nav">
             <li class="active"><a href="index.html">Trang Chủ</a></li>
 			<li>
-  				  <a class="notification" href="notifications.html"><span>Thông Báo <span class="glyphicon">&#xe123;</span></span><span class="badge">99</span> </a></li>
+				<a class="notification" href="notifications.html"><span class="glyphicon glyphicon-bell"></span> Thông báo<span  class="badge">99</span> </a></li>
           </ul>
         </div><!--/.nav-collapse -->       
       </div>          
