--- a/index-renter.html
+++ b/index-renter.html
@@ -61,7 +61,7 @@
               </div>
               <div class="col-md-6 col-sm-6 col-xs-6">
                 <div class="aa-header-right">
-                  <a href="#" class="aa-register">Xin chào ABCD!</a>				  
+                  <a href="profile.html" class="aa-register">Xin chào ABCD!</a>				  
                   <a href="#" class="aa-login">Đăng Xuất</a>
                 </div>
               </div>
