--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
         <div class="col-md-12">
           <div class="aa-header-area">
             <div class="row">
-              <div class="col-md-6 col-sm-6 col-xs-6">
+              <div class="col-md-6 col-sm-6 col-xs-6" style="padding: 0px">
                 <div class="aa-header-right" style="text-align: left;">
-                  <a href="post-news.html" class="aa-register">KÊNH RAO TIN</a>
-                  <a href="html-manage/index-renter.html" class="aa-login">QUẢN LÝ NHÀ ĐANG THUÊ</a> 
+                  <a href="cb-index.html" target= "_blank" class="aa-register" style="color: rgb(85,85,85);"><b>HỆ THỐNG ĐĂNG TIN</b></a>
+                  <a href="cs-index.html" class="aa-login" style="color: rgb(85,85,85);"><b>HỆ THỐNG QUẢN LÝ NHÀ ĐANG THUÊ</b></a> 
                   <!--<div class="aa-header-left">
                   <div class="aa-telephone-no">
                     <span class="fa fa-phone"></span>
