--- a/cb-dangtin.html
+++ b/cb-dangtin.html
@@ -651,7 +651,7 @@
 								<aside class="aa-properties-sidebar" style="width: 150px; height: 50px; padding-left:25px;">	
 									<div class="aa-properties-single-sidebar">	
 										<div class="aa-single-advance-search" style="width: 150px; height: 50px; padding: 0px; margin: 0px; ">
-										  <a href="cb-index.html"><input style="text-transform: capitalize; background-color: rgba(221,88,44,1.00); width: 150px" type="button" value="Quay lại" class="aa-search-btn"></a>
+										  <a href="cb-index.html"><input style="text-transform: capitalize; background-color: rgb(221,88,44); width: 150px" type="button" value="Quay lại" class="aa-search-btn"></a>
 										</div>
 									</div>
 								</aside>
