--- a/cb-index.html
+++ b/cb-index.html
@@ -51,7 +51,7 @@
   <!-- END SCROLL TOP BUTTON -->
 
   <!-- Start header section -->
-  <header id="aa-header"  style="border-bottom: solid 2px rgb(136,136,136); ">  
+  <header id="aa-header"  style="border-bottom: solid 1px rgba(136,136,136,0.5); ">  
     <div class="container">
       <div class="row"
         <div class="col-md-12">
@@ -130,9 +130,9 @@
 		  <p> <br><br>  </p>
 			  <table style="width: 80%; margin-left: 120px;">
 				<tr style="text-align: center">
-					<th style="text-align: center"><a href="cb-dangtin.html"><img alt="Đăng tin" style="width: 200px;" src="img/icon/post-new.png"></a></th>
-					<th style="text-align: center"><a href="cb-quanlytindadang.html"><img alt="Quản lý tin đã đăng" style="width: 200px;" src="img/icon/icon-load.png"></a></th>
-					<th style="text-align: center"><a href="cb-nhadangtrentrang.html"><img alt="Nhà đang trên trang" style="width: 200px;" src="img/icon/icon-nha-tren-trang.png"></a></th>
+					<th style="text-align: center"><a href="cb-dangtin.html"><img alt="Đăng tin" style="width: 40%;" src="img/icon/post-new.png"></a></th>
+					<th style="text-align: center"><a href="cb-quanlytindadang.html"><img alt="Quản lý tin đã đăng" style="width: 40%;" src="img/icon/icon-load.png"></a></th>
+					<th style="text-align: center"><a href="cb-nhadangtrentrang.html"><img alt="Nhà đang trên trang" style="width: 40%;" src="img/icon/icon-nha-tren-trang.png"></a></th>
 				</tr>
 				<tr style="text-align: center">
 					<td style="vertical-align: top;"><a href="cb-dangtin.html"><h3 style="text-align: center;">Đăng tin</h3></a></td>
