--- a/cs-index.html
+++ b/cs-index.html
@@ -53,7 +53,7 @@
   <!-- END SCROLL TOP BUTTON -->
 
 
-  <header id="aa-header"  style="border-bottom: solid 2px rgb(136,136,136); ">  
+  <header id="aa-header"  style="border-bottom: solid 1px rgba(136,136,136,0.5); ">  
     <div class="container">
       <div class="row"
         <div class="col-md-12">
