--- a/cb-index.html
+++ b/cb-index.html
@@ -140,9 +140,9 @@
 					<td style="vertical-align: top;"><a href="cb-nhadangtrentrang.html"><h3 style="text-align: center;">Nhà đang trên trang</h3></a> <br><br><br></td>
 				</tr>
 				<tr style="text-align: center">
-					<th style="text-align: center"><a href="cb-nhadangchothue.html"><img alt="Nhà đang cho thuê" style="width: 200px;" src="img/icon/icon-nha-dang-cho-thue.png"></a></th>
-					<th style="text-align: center"><img alt="Doanh thu" style="width: 200px;" src="img/icon/icon-doanh-thu copy.png"></th>
-					<th style="text-align: center"><img alt="Thông báo" style="width: 200px;" src="img/icon/icon-thong-bao copy.png"></th>
+					<th style="text-align: center"><a href="cb-nhadangchothue.html"><img alt="Nhà đang cho thuê" style="width: 40%;" src="img/icon/icon-nha-dang-cho-thue.png"></a></th>
+					<th style="text-align: center"><img alt="Doanh thu" style="width: 40%;" src="img/icon/icon-doanh-thu copy.png"></th>
+					<th style="text-align: center"><img alt="Thông báo" style="width: 40%;" src="img/icon/icon-thong-bao copy.png"></th>
 				</tr>
 				<tr>
 					<td style="vertical-align: top;"><a href="cb-nhadangchothue.html"><h3 style="text-align: center;">Nhà đang cho thuê</h3></a></td>
