--- a/cb-index.html
+++ b/cb-index.html
@@ -128,7 +128,7 @@
 			<p> <br><br><br> <h2 style="text-align: center">Chào mừng đến với hệ thống Cyber Boss</h2></p>
 		  <p style="text-align: center">Cyber Boss là công cụ giúp bạn đăng bài , quản lý nhà cho thuê , theo dõi tình trạng nhà cửa...</p>
 		  <p> <br><br>  </p>
-			  <table style="width: 80%; margin-left: 120px;">
+			  <table style="width: 80%; margin-left: 10%">
 				<tr style="text-align: center">
 					<th style="text-align: center"><a href="cb-dangtin.html"><img alt="Đăng tin" style="width: 40%;" src="img/icon/post-new.png"></a></th>
 					<th style="text-align: center"><a href="cb-quanlytindadang.html"><img alt="Quản lý tin đã đăng" style="width: 40%;" src="img/icon/icon-load.png"></a></th>
