--- a/cb-index.html
+++ b/cb-index.html
@@ -121,7 +121,7 @@
   <!-- End menu section -->
 
   <!-- Start Properties  -->
-  <section id="aa-properties" style="margin-top: 150px; text-align: center">
+  <section class="col-md-12" id="aa-properties" style="margin-top: 150px; text-align: center">
     <div class="container">
       <div class="row">
         <div class="col-md-12" style="background-color: rgb(248,248,248);">
