--- a/cb-dangtin.html
+++ b/cb-dangtin.html
@@ -114,8 +114,9 @@
   <section id="aa-properties" style="margin-top: 150px; text-align: center">
     <div class="container">
       <div class="row" style="padding: 0px;">
-        <div class="col-md-3">
-          <div class="aa-properties-content">            
+		  <div class="col-md-12">
+		    <div class="col-md-3">
+          		<div class="aa-properties-content">            
             <!-- Start properties content body -->
 			  <div class="vertical-menu">
 				  <a href="cb-dangtin.html" class="active">Đăng tin</a>
@@ -219,6 +220,7 @@
 						</tr>
 						<tr>
 							<th style="line-height: 50px">Phường/xã: </th>
+
 								<td style="width: 200px">
 									<div class="aa-advance-search-area" style="width: 200px">
 										<div class="form" style="width: 200px">
@@ -663,6 +665,7 @@
 			 </div>
 		</div>
 <!---aaaaaaaa--->
+		  </div>
       </div>
     </div>
   </section>
