--- a/cb-dangtin.html
+++ b/cb-dangtin.html
@@ -111,7 +111,7 @@
   <!-- End menu section -->
 
   <!-- Start Properties  -->
-  <section id="aa-properties" style="margin-top: 150px; text-align: center">
+  <section id="aa-properties" style="margin-top: 10%; text-align: center">
     <div class="container">
       <div class="row" style="padding: 0px;">
 		  <div class="col-md-12">
@@ -137,21 +137,7 @@
 					<table style="width: 100%; font-size: 14px;">
 						<tr>
 							<th style="line-height: 50px; width: 150px">Tiêu đề (*): </th>
-							<td colspan="3">
-								<div class="aa-advance-search-area">
-									<div class="form">
-										<div class="aa-advance-search-top">
-											<div class="row">
-												<div class="col-md-4">
-													<div class="aa-single-advance-search">
-														<input style="width: 573px" type="text" placeholder="Tên bất động sản" maxlength="90">
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</td>
+							<td><input style="width: 233%" type="text" placeholder="Tên bất động sản" maxlength="90"></td>
 						</tr>
 						<tr>
 							<th style="line-height: 50px">Loại nhà đất (*): </th>
